--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: schemaorgae
-#application: webschemas
+application: sdo-athletics
+#application: schemaorgae
 
 version: 1
 module: default
