--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,7 @@
-<<<<<<< HEAD
-application: sdo-athletics
+#application: sdo-athletics
 #application: schemaorgae
-=======
 #application: schemaorgae
 #application: webschemas
->>>>>>> 4ee318d3729096659337e314ba10944ce991bd67
 
 #version: 1
 module: default
